--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --primary-color:rgb(52, 54, 54);
     --secondary-color: #011009d7 ;
     --accent-color: #ffffff;
-    --text-color: #020a09;
+    --text-color: #056d36;
     --bg-color: rgba(42, 214, 214, 0.123);
 }
 
@@ -28,7 +28,7 @@ body {
 }
 
 header {
-    background-color: rgb(64, 70, 74);
+    background-color: rgb(5, 13, 9);
     color: rgb(83, 170, 192);
     /* padding: 0.2rem 0; */
     position: fixed;
@@ -41,7 +41,7 @@ header {
 }
 
 header.scrolled {
-    background-color: rgba(86, 154, 185, 0.9);
+    background-color: rgba(1, 4, 6, 0.9);
     align-items: center;
 }
 
@@ -143,7 +143,7 @@ nav {
     background-color: var(--accent-color);
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 4px 6px rgba(20, 84, 104, 0.1);
+    box-shadow: 0 4px 6px rgba(53, 171, 17, 0.959);
     transition: opacity 0.5s ease;
 }
 
@@ -269,6 +269,6 @@ footer {
     }
 
     .news-image {
-        max-width: 100%;
+        max-width: 200%;
     }
 }
