creation de lien entre la page index et la page contact

--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 
 :root {
     --primary-color:rgb(52, 54, 54);
-    --secondary-color: #011009d7 ;
+    --secondary-color: #092820d7 ;
     --accent-color: #ffffff;
-    --text-color: #056d36;
+    --text-color: #020303;
     --bg-color: rgba(42, 214, 214, 0.123);
 }
 
