--- a/accueil/style.css
+++ b/accueil/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 header {
-    background-color: rgb(5, 13, 9);
+    background-color: #2c3e50;
     color: rgb(83, 170, 192);
     /* padding: 0.2rem 0; */
     position: fixed;
